<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/home">
    <fragment
        android:id="@+id/home"
        android:name="com.apps.wedding.activities_fragments.activity_home.fragments.FragmentHome"
        android:label="@string/home"
        tools:layout="@layout/fragment_home" />
    <fragment
        android:id="@+id/nearby"
        android:name="com.apps.wedding.activities_fragments.activity_home.fragments.FragmentOrders"
        android:label="@string/nearby"
        tools:layout="@layout/fragment_nearby" />
    <fragment
        android:id="@+id/reservation"
        android:name="com.apps.wedding.activities_fragments.activity_home.fragments.FragmentProfile"
        android:label="@string/reservation"
        tools:layout="@layout/fragment_orders" />
    <fragment
        android:id="@+id/profile"
        android:name="com.apps.wedding.activities_fragments.activity_home.fragments.FragmentReservation"
        android:label="@string/profile"
        tools:layout="@layout/fragment_profile" />

</navigation>