<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@drawable/rounded_top"
        android:padding="16dp"

        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:textColor="@color/black"
                android:text="@string/filter"
                />
            <androidx.legacy.widget.Space
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_weight="1"/>
            <ImageView
                android:id="@+id/imageClose"
                android:layout_width="28dp"
                android:layout_height="28dp"
                android:src="@drawable/ic_close"
                android:padding="6dp"
                android:background="@drawable/stroke_gray"
                />
        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="14sp"
            android:textColor="@color/black"
            android:text="@string/rating"
            android:layout_marginTop="24dp"
            />
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="14sp"
            android:textColor="@color/black"
            android:text="@string/price"
            android:layout_marginTop="24dp"
            />

        <com.google.android.material.slider.RangeSlider
            android:id="@+id/slider"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/Widget.App.Slider"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            >
            <TextView
                android:id="@+id/tvFrom"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="14sp"
                android:textColor="@color/black"
                />
            <androidx.legacy.widget.Space
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                />
            <TextView
                android:id="@+id/tvTo"

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="14sp"
                android:textColor="@color/black"
                />

        </LinearLayout>

        <Button
            android:id="@+id/btnShowFilterResults"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:layout_marginTop="12dp"
            android:layout_marginBottom="8dp"
            android:textColor="@color/white"
            android:textSize="14sp"
            android:text="@string/show_results"
            style="@style/button"
            android:layout_marginStart="3dp"
            android:layout_marginEnd="3dp"

            />

        <TextView
            android:id="@+id/tvClearFilter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/clear_filter"
            android:textColor="@color/colorPrimary"
            android:textStyle="bold"
            android:textSize="14sp"
            android:visibility="gone"
            />
    </LinearLayout>
</layout>