<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="phone"
            type="String" />

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/gray8">



        <include
            android:id="@+id/toolbar"
            layout="@layout/toolbar"

            />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="50dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/toolbar"

            >

            <ImageView
                android:id="@+id/logo"
                android:layout_width="wrap_content"
                android:layout_height="100dp"
                android:layout_gravity="center_horizontal"
                android:src="@drawable/logo" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:orientation="vertical">


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginEnd="20dp"
                    android:text="@string/please_enter_code_sent_to"
                    android:textColor="@color/black"
                    android:textSize="14sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginEnd="20dp"
                    android:text="@{phone}"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="13sp" />

                <com.chaos.view.PinView
                    android:id="@+id/edtCode"
                    style="@style/PinWidget.PinView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="20dp"
                    android:cursorVisible="true"
                    android:inputType="number"
                    android:itemBackground="@drawable/pin_view_item"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="15sp"
                    app:cursorColor="@color/colorPrimaryDark"
                    app:cursorWidth="2dp"
                    app:hideLineWhenFilled="true"
                    app:itemCount="6"
                    app:itemHeight="40dp"
                    app:itemRadius="5dp"
                    app:itemSpacing="15dp"
                    app:itemWidth="40dp"
                    app:lineColor="@color/transparent"
                    app:lineWidth="0dp"
                    app:viewType="rectangle" />


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="20dp">

                    <TextView
                        android:id="@+id/tvResend"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/resend"
                        android:textColor="@color/black"
                        android:textSize="15sp"
                        android:visibility="gone" />

                    <Space
                        android:layout_width="0dp"
                        android:layout_height="0dp"
                        android:layout_weight="1" />

                    <TextView
                        android:id="@+id/tvCounter"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="00:00"
                        android:textColor="@color/black"
                        android:textSize="15sp" />
                </LinearLayout>

                <Button
                    android:id="@+id/btnConfirm"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="50dp"
                    android:background="@drawable/rounded_primary"
                    android:minWidth="120dp"
                    android:paddingLeft="20dp"
                    android:paddingRight="20dp"
                    android:text="@string/confirm"
                    android:textColor="@color/white"
                    android:textSize="15sp"

                    />

            </LinearLayout>


        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
