<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="model"
            type="com.e_co.wedding.model.WeddingHallModel" />

        <variable
            name="offerModel"
            type="com.e_co.wedding.model.WeddingHallModel.OfferModel" />

        <import type="android.view.View" />
    </data>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                app:cardBackgroundColor="@color/gray18"
                app:cardCornerRadius="20dp"
                app:cardElevation="3dp"
                app:contentPadding="3dp"


                >

                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:layout_marginTop="3dp"
                        android:layout_marginEnd="8dp"
                        android:orientation="vertical"
                        android:visibility="@{offerModel==null?View.VISIBLE:View.GONE,default=gone}">

                        <com.makeramen.roundedimageview.RoundedImageView
                            image="@{model.main_image}"
                            android:layout_width="match_parent"
                            android:layout_height="200dp"
                            android:layout_margin="5dp"
                            app:riv_corner_radius="15dp" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="8dp"
                            android:layout_marginTop="5dp"
                            android:layout_marginEnd="8dp"
                            android:text="@{model.name}"
                            android:textColor="@color/black"
                            android:textSize="15sp"
                            android:textStyle="bold"

                            />

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="end|center_vertical"
                            android:layout_marginStart="5dp"
                            android:layout_marginEnd="5dp"
                            android:orientation="horizontal">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center_vertical"
                                android:text="@{model.price}"
                                android:textColor="@color/colorAccent"
                                android:textSize="15sp"

                                />

                            <ImageView
                                android:layout_width="20dp"
                                android:layout_height="20dp"
                                android:layout_gravity="center_vertical"
                                android:src="@drawable/ic_money"

                                />
                        </LinearLayout>

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:layout_marginTop="3dp"
                        android:layout_marginEnd="8dp"
                        android:orientation="vertical"
                        android:visibility="@{offerModel!=null?View.VISIBLE:View.GONE,default=gone}">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="3dp"
                            android:text="@{model.name}"
                            android:textColor="@color/black"
                            android:textSize="18sp"
                            android:textStyle="bold" />

                        <com.makeramen.roundedimageview.RoundedImageView
                            image="@{offerModel.image}"
                            android:layout_width="match_parent"
                            android:layout_height="150dp"
                            android:layout_marginTop="8dp"
                            app:riv_corner_radius="15dp" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="8dp"
                            android:layout_marginTop="5dp"
                            android:layout_marginEnd="8dp"
                            android:text="@{offerModel.name}"
                            android:textColor="@color/black"
                            android:textSize="15sp"
                            android:textStyle="bold"

                            />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_vertical"
                            android:layout_marginStart="8dp"
                            android:layout_marginTop="12dp"
                            android:layout_marginEnd="8dp"
                            android:text="@{offerModel.text}"
                            android:textColor="@color/gray5"
                            android:textSize="12sp" />

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="end|center_vertical"
                            android:layout_marginStart="5dp"
                            android:layout_marginEnd="5dp"
                            android:orientation="horizontal">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center_vertical"
                                android:text="@{offerModel.price}"
                                android:textColor="@color/colorAccent"
                                android:textSize="15sp"

                                />

                            <ImageView
                                android:layout_width="20dp"
                                android:layout_height="20dp"
                                android:layout_gravity="center_vertical"
                                android:src="@drawable/ic_money"

                                />
                        </LinearLayout>

                    </LinearLayout>

                </FrameLayout>


            </androidx.cardview.widget.CardView>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="5dp"
                android:text="@string/basic_items"
                android:textColor="@color/black"
                android:textSize="15sp"


                />

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="3dp"
                android:layout_marginTop="8dp"
                app:cardBackgroundColor="@color/transparent"
                app:cardCornerRadius="5dp"
                app:cardElevation="3dp">

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/recViewBaiscItem"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"

                    android:background="@color/white" />

            </androidx.cardview.widget.CardView>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="5dp"
                android:text="@string/extra_items"
                android:textColor="@color/black"
                android:textSize="15sp"

                />

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="3dp"
                android:layout_marginTop="8dp"
                app:cardBackgroundColor="@color/transparent"
                app:cardCornerRadius="5dp">

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/recViewAdditionalItem"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/white" />

            </androidx.cardview.widget.CardView>

            <Button
                android:id="@+id/btnBook"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="100dp"
                android:background="@drawable/rounded_primary"
                android:minWidth="120dp"
                android:text="@string/choose_day"
                android:textColor="@color/white" />
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>
</layout>
